<?xml version="1.0"?>
<package>
  <name>wam_description</name>
  <version>0.0.1</version>
  <description> URDF description of the Barrett WAM (4 DoFs) </description>

  <author>Kyle Maroney</author>
  <license>BSD</license>

  <maintainer email="egambaro@robotnik.es">Elena Gamabro</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>

